EMBCDFA # 1274 - Fixed the DFA UI issues - Added spacing to the damaged property page - Fixed the check box padding issue - Fixed the padding on new clean up log modal

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.scss
@@ -8,6 +8,10 @@ mat-form-field {
     margin: 15px 0;
 }
 
+.primary-radio-button {
+   margin: 5px;
+}
+
 .highlight {
     font-weight: 700;
     color: #169bd5;
